--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,21 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.scrollable-section {
+  scrollbar-width: thin;
+  scrollbar-color: #C7C7C7 transparent;
+}
+
+.scrollable-section::-webkit-scrollbar {
+  width: 0.3vw;
+}
+
+.scrollable-section::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.scrollable-section::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
